--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,15 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy requirements and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy backend code
 COPY . .
 
-# Expose port
 EXPOSE 8001
 
-# Run the application
-CMD ["python", "-m", "backend.main"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
